[package]
name = "nth-fibonacci-number"
version = "0.1.0"
authors = ["Will Harris <will.t.harris@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="nth_fibonacci_number"
path="src/nth_fibonacci_number.rs"
