[package]
name = "twelve_days_of_xmas"
version = "0.1.0"
authors = ["Will Harris <will.t.harris@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="twelve_days_of_xmas"
path="src/twelve_days_of_xmas.rs"